Add public / GitHub locations

--- a/gedcom-5.5.2.html
+++ b/gedcom-5.5.2.html
@@ -90,8 +90,11 @@ Everyone is permitted to copy and distribute verbatim copies of this document, b
 
       <p>This document is a <em>Draft</em>. Feedback and comments on this specification are welcome. You may create a pull-request to propose and collaborate on changes to the document. A future version of this document will remove its <em>Draft</em> status.</p>
 
-      <!-- TODO Add link to GitHub project -->
-      <p>This document is maintained on GitHub: <strong>ADD LINK HERE</strong></p>
+      <p>GitHub Project: <a href="https://github.com/jfcardinal/GEDCOM-5.5.2">GEDCOM-5.5.2</a></p>
+
+      <p>The public version of this document: <a href="https://jfcardinal.github.io/GEDCOM-5.5.2/gedcom-5.5.2.html">https://jfcardinal.github.io/GEDCOM-5.5.2/gedcom-5.5.2.html</a></p>
+
+      <p>Associated documents: <a href="https://jfcardinal.github.io/GEDCOM-5.5.2/index.html">https://jfcardinal.github.io/GEDCOM-5.5.2</a></p>
 
     </section>
 
