Add README.md Update notes

--- a/gedcom-5.5.2.html
+++ b/gedcom-5.5.2.html
@@ -74,7 +74,7 @@ Everyone is permitted to copy and distribute verbatim copies of this document, b
 
       <h3 id="abstract">Abstract</h3>
 
-      <p>This specification defines a minor revision to GEDCOM 5.5.1. GEDCOM 5.5.2 corrects flaws and resolves ambiguities in GEDCOM 5.5.1 to improve interoperability and reduce compliance barriers.</p>
+      <p>GEDCOM 5.5.2 is a minor revision to GEDCOM 5.5.1. GEDCOM 5.5.2 corrects flaws and resolves ambiguities in GEDCOM 5.5.1 to improve interoperability and reduce compliance barriers.</p>
 
       <h3 id="document-status">Document Status</h3>
 
