--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>GEDCOM 5.5.2 Notes for Contributors</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css" />
+  <link rel="alternate stylesheet" href="light.css" title="Light" />
+  <link rel="stylesheet" href="dark.css" title="Dark" />
 </head>
 <body>
   <article>
@@ -26,6 +29,8 @@
       <p>The GEDCOM 5.5.2 document describes a data interchange specification for genealogy data. To define the purpose of some elements, it includes terms used in genealogy to help implementers determine how data in the sending or receiving system maps to GEDCOM 5.5.2 data elements.</p>
 
       <p>The GEDCOM 5.5.2 document is <em>not</em> a general-purpose guide for how to process or manipulate genealogy data. The document must avoid exceeding its scope and intruding on the domain of the sending or receiving systems.</p>
+
+      <p>The specification describes GEDCOM 5.5.2. It does not describe prior GEDCOM versions with the exception of some references to GEDCOM 5.5.1 in the <a href="gedcom-5.5.2.html#section-introduction">Introduction</a> and <a href="gedcom-5.5.2.html#section-introduction">Changes in GEDCOM 5.5.2</a> sections.</p>
 
       <h3>Medium</h3>
 
