Remove LDS-specific requirements and comments

--- a/notes.html
+++ b/notes.html
@@ -17,7 +17,7 @@
     <div>
       <dl>
         <dt class="editor">Editor:</dt>
-        <dd class="editor p-author">John Cardinal (<span class="organization">Family History Hosting, LLC</span>)</dd>
+        <dd class="editor p-author">John Cardinal (<span class="organization"><a href="https://www.familyhistoryhosting.com">Family History Hosting, LLC</a></span>)</dd>
       </dl>
     </div>
 
@@ -26,11 +26,18 @@
 
       <h3>Focus</h3>
 
-      <p>The GEDCOM 5.5.2 document describes a data interchange specification for genealogy data. To define the purpose of some elements, it includes terms used in genealogy to help implementers determine how data in the sending or receiving system maps to GEDCOM 5.5.2 data elements.</p>
+      <ul>
+        <li>The GEDCOM 5.5.2 document describes a data interchange specification for genealogy data. To define the purpose of some elements, it includes terms used in genealogy to help implementers determine how data in the sending or receiving system maps to GEDCOM 5.5.2 data elements.</li>
 
-      <p>The GEDCOM 5.5.2 document is <em>not</em> a general-purpose guide for how to process or manipulate genealogy data. The document must avoid exceeding its scope and intruding on the domain of the sending or receiving systems.</p>
+        <li>The GEDCOM 5.5.2 document is <em>not</em> a general-purpose guide for how to process or manipulate genealogy data. The document must avoid exceeding its scope and intruding on the domain of the sending or receiving systems.</li>
 
-      <p>The specification describes GEDCOM 5.5.2. It does not describe prior GEDCOM versions with the exception of some references to GEDCOM 5.5.1 in the <a href="gedcom-5.5.2.html#section-introduction">Introduction</a> and <a href="gedcom-5.5.2.html#section-introduction">Changes in GEDCOM 5.5.2</a> sections.</p>
+        <li>The specification describes GEDCOM 5.5.2. It does not describe prior GEDCOM versions with the exception of some references to GEDCOM 5.5.1 in the <a href="gedcom-5.5.2.html#section-introduction">Introduction</a> and <a href="gedcom-5.5.2.html#section-introduction">Changes in GEDCOM 5.5.2</a> sections.</li>
+
+        <li>Prior GEDCOM versions included requirements that were specific to the Family History Department of The Church of Jesus Christ of Latter-day Saints (now known as FamilySearch). While it is appropriate for an organization to impose requirements on partners with whom it exchanges data, those requirements should not be included in a specification that is used by other people and organizations to exchange data.
+          <p>GEDCOM 5.5.2 does not contain any requirements that are specific to any organization, and none should be introduced.</p>
+          <p>If an organization or group has requirements that are not included in the GEDCOM 5.5.2 specification, they should describe those requirements in a separate document and verify that documents they accept or produce meet those requirements.</p>
+        </li>
+      </ul>
 
       <h3>Medium</h3>
 
