Update after new indexing/referencing automation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -15,6 +15,7 @@ p, h4, h5, h6 { margin: 0.5em 0; }
 <body>
 <ul>
   <li><a href="gedcom-5.5.2.html">GEDCOM 5.5.2</a> (specification)</li>
+  <li><a href="extensions.html">Common GEDCOM Extensions</a></li>
   <li><a href="notes.html">Notes for Contributors</a></li>
 </ul>
 </body>
