--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ p, h4, h5, h6 { margin: 0.5em 0; }
   <li><a href="extensions.html">Common GEDCOM Extensions</a></li>
   <li><a href="gedcom-sources.html">Known GEDCOM Sources</a></li>
   <li><a href="notes.html">Notes for Contributors</a></li>
+  <li><a href="lds.html">Obsolete LDS Definitions</a></li>
 </ul>
 </body>
 </html>
