--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ p, h4, h5, h6 { margin: 0.5em 0; }
 <ul>
   <li><a href="gedcom-5.5.2.html">GEDCOM 5.5.2</a> (specification)</li>
   <li><a href="extensions.html">Common GEDCOM Extensions</a></li>
-  <li><a href="gedcom-sources.html">Known GEDCOM Sources</a></li>
+  <li><a href="source-applications.html">Source Applications</a></li>
   <li><a href="notes.html">Notes for Contributors</a></li>
   <li><a href="lds.html">Obsolete LDS Definitions</a></li>
 </ul>
